<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.chatapp.abobakrdev.egychat2.ActiveUser.ui.Live.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.chatapp.abobakrdev.egychat2.ActiveUser.ui.TimeLine.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.chatapp.abobakrdev.egychat2.ActiveUser.ui.Setting.SettingFragment"
        android:label="@string/Setting"
        tools:layout="@layout/myprofile_layout" />
</navigation>